{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 228,
  "lineage": "6fe62e78-8f53-42a3-824d-7172ebf1962b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c97e62cb19d53f1",
            "arn": "arn:aws:ec2:us-east-1:190009833917:instance/i-0de53613a0fb5b200",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de53613a0fb5b200",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d8c1f9df7f1bcf01"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8c1f9df7f1bcf01",
            "private_dns": "ip-10-15-21-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.15.21.220",
            "public_dns": "ec2-184-73-136-213.compute-1.amazonaws.com",
            "public_ip": "184.73.136.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-079177ae4e48fcd69",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4141e3e6000d981",
            "tags": {
              "Name": "frog-nat-instance"
            },
            "tags_all": {
              "Name": "frog-nat-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b8d2a79361ee4d0a"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_network_interface.frog_network_interface",
            "aws_subnet.frog-public-1",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "frog-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:internet-gateway/igw-0cf78801d9e70db04",
            "id": "igw-0cf78801d9e70db04",
            "owner_id": "190009833917",
            "tags": {
              "Name": "frog"
            },
            "tags_all": {
              "Name": "frog"
            },
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "dependencies": [
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frog-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:190009833917:loadbalancer/app/frog-alb/929d96763ea9c7a2",
            "arn_suffix": "app/frog-alb/929d96763ea9c7a2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "frog-alb-840801018.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:190009833917:loadbalancer/app/frog-alb/929d96763ea9c7a2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frog-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0291d6aac11d4f234"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-060923f6e68fa38dd"
              },
              {
                "subnet_id": "subnet-0d4141e3e6000d981"
              }
            ],
            "subnets": [
              "subnet-060923f6e68fa38dd",
              "subnet-0d4141e3e6000d981"
            ],
            "tags": {
              "Name": "frog-alb"
            },
            "tags_all": {
              "Name": "frog-alb"
            },
            "vpc_id": "vpc-0b8257b98c7dbee4b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.frog-alb-securitygroup",
            "aws_subnet.frog-public-1",
            "aws_subnet.frog-public-2",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frog-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:190009833917:listener/app/frog-alb/929d96763ea9c7a2/7ed59f1134a928a4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:190009833917:targetgroup/frog-target-group/deecdf6fcf0dc35a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:190009833917:listener/app/frog-alb/929d96763ea9c7a2/7ed59f1134a928a4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:190009833917:loadbalancer/app/frog-alb/929d96763ea9c7a2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frog-alb",
            "aws_lb_target_group.frog-target-group",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frog-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:190009833917:targetgroup/frog-target-group/deecdf6fcf0dc35a",
            "arn_suffix": "targetgroup/frog-target-group/deecdf6fcf0dc35a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:190009833917:targetgroup/frog-target-group/deecdf6fcf0dc35a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frog-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "dependencies": [
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "frog_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:network-interface/eni-0d8c1f9df7f1bcf01",
            "attachment": [
              {
                "attachment_id": "eni-attach-09e958f37a346df81",
                "device_index": 0,
                "instance": "i-0de53613a0fb5b200"
              }
            ],
            "id": "eni-0d8c1f9df7f1bcf01",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:55:9f:e2:49:11",
            "owner_id": "190009833917",
            "private_dns_name": "ip-10-15-21-220.ec2.internal",
            "private_ip": "10.15.21.220",
            "private_ip_list": [
              "10.15.21.220"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.15.21.220"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b8d2a79361ee4d0a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4141e3e6000d981",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.frog-public-1",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06a12bef9d7090aca1080289494",
            "instance_id": "i-0de53613a0fb5b200",
            "instance_owner_id": "190009833917",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0d8c1f9df7f1bcf01",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06a12bef9d7090aca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nat_instance",
            "aws_key_pair.mykeypair",
            "aws_network_interface.frog_network_interface",
            "aws_route_table.frog-private",
            "aws_subnet.frog-public-1",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frog-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:route-table/rtb-06a12bef9d7090aca",
            "id": "rtb-06a12bef9d7090aca",
            "owner_id": "190009833917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0d8c1f9df7f1bcf01",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "frog-private"
            },
            "tags_all": {
              "Name": "frog-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frog-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:route-table/rtb-05b0f6a9b7a0a64c9",
            "id": "rtb-05b0f6a9b7a0a64c9",
            "owner_id": "190009833917",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf78801d9e70db04",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "frog-public-1"
            },
            "tags_all": {
              "Name": "frog-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.frog-gw",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frog-private-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d43d9566f7dadb0",
            "route_table_id": "rtb-06a12bef9d7090aca",
            "subnet_id": "subnet-082c5184b4c54b827"
          },
          "dependencies": [
            "aws_route_table.frog-private",
            "aws_subnet.frog-private-1",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frog-private-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027c218b6360814b6",
            "route_table_id": "rtb-06a12bef9d7090aca",
            "subnet_id": "subnet-0e4bf350f32750326"
          },
          "dependencies": [
            "aws_route_table.frog-private",
            "aws_subnet.frog-private-2",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frog-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebc94154dc1c8f83",
            "route_table_id": "rtb-05b0f6a9b7a0a64c9",
            "subnet_id": "subnet-0d4141e3e6000d981"
          },
          "dependencies": [
            "aws_internet_gateway.frog-gw",
            "aws_route_table.frog-public",
            "aws_subnet.frog-public-1",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frog-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac56490f1fefa8ef",
            "route_table_id": "rtb-05b0f6a9b7a0a64c9",
            "subnet_id": "subnet-060923f6e68fa38dd"
          },
          "dependencies": [
            "aws_internet_gateway.frog-gw",
            "aws_route_table.frog-public",
            "aws_subnet.frog-public-2",
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frog-alb-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:security-group/sg-0291d6aac11d4f234",
            "description": "frog security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0291d6aac11d4f234",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frog-alb",
            "name_prefix": "",
            "owner_id": "190009833917",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frog-elb"
            },
            "tags_all": {
              "Name": "frog-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.frog"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frog-ecs-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:security-group/sg-061d8422ec46db80f",
            "description": "frog project security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061d8422ec46db80f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0291d6aac11d4f234"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs",
            "name_prefix": "",
            "owner_id": "190009833917",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frog-ecs"
            },
            "tags_all": {
              "Name": "frog-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frog-alb-securitygroup",
            "aws_vpc.frog"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:security-group/sg-0cf49cc72f59d4068",
            "description": "NAT instance security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf49cc72f59d4068",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nat_security_group",
            "name_prefix": "",
            "owner_id": "190009833917",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frog-nat-instance-sg"
            },
            "tags_all": {
              "Name": "frog-nat-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frog-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:subnet/subnet-082c5184b4c54b827",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.15.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082c5184b4c54b827",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190009833917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frog-private-1"
            },
            "tags_all": {
              "Name": "frog-private-1"
            },
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "dependencies": [
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frog-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:subnet/subnet-0e4bf350f32750326",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.15.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4bf350f32750326",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190009833917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frog-private-2"
            },
            "tags_all": {
              "Name": "frog-private-2"
            },
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "dependencies": [
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frog-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:subnet/subnet-0d4141e3e6000d981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.15.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4141e3e6000d981",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190009833917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frog-public-1"
            },
            "tags_all": {
              "Name": "frog-public-1"
            },
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "dependencies": [
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frog-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:subnet/subnet-060923f6e68fa38dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.15.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060923f6e68fa38dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190009833917",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frog-public-2"
            },
            "tags_all": {
              "Name": "frog-public-2"
            },
            "vpc_id": "vpc-0b8257b98c7dbee4b"
          },
          "dependencies": [
            "aws_vpc.frog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "frog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190009833917:vpc/vpc-0b8257b98c7dbee4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/16",
            "default_network_acl_id": "acl-0f47791850f37be3d",
            "default_route_table_id": "rtb-00efcea5042a42353",
            "default_security_group_id": "sg-0b8d2a79361ee4d0a",
            "dhcp_options_id": "dopt-d2dea5a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8257b98c7dbee4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00efcea5042a42353",
            "owner_id": "190009833917",
            "tags": {
              "Name": "frog"
            },
            "tags_all": {
              "Name": "frog"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}